--- a/templates/base.html
+++ b/templates/base.html
@@ -61,6 +61,14 @@
             </div>
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                 <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                    <li class="list-inline-item">
+                        <a class="text-black nav-link" href='/'>
+                            <div class="text-center">
+                                <i class="fa fa-home"></i>
+                                <p>Home</p>
+                            </div>
+                        </a>
+                    </li>
                     <li class="list-inline-item dropdown">
                         <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <div class="text-center">
